src/app/Pages/home/home.component.sass
.home__container
    width: 100vw
    height: 100vh
    padding: 1rem
    overflow: hidden

    display: flex
    flex-direction: column
    align-items: center
    gap: 1rem

    background-color: #3c1642
    color: #fff
    font-family: sans-serif

    .title
        width: 100%
        max-width: 425px
        img
            object-fit: fit
            width: 100%
            height: 100%

